manifests/echo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "echo.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: echo-service
        port: 8080
